--- a/requirements.in
+++ b/requirements.in
@@ -1,12 +1,12 @@
-jax[cuda12]==0.4.25
-jaxlib>=0.4.16
+jax[cuda12_pip]==0.4.30
+jaxlib==0.4.30
 
-flax>=0.8.4
+flax==0.8.5
 brax==0.10.3
 chex>=0.1.86
 flashbax>=0.1.0
 mujoco==3.1.3
-orbax-checkpoint>=0.5.18
+orbax-checkpoint==0.6.4
 
 numpy==1.26.4
 scipy==1.12.0
