Added action)observable.py as a wrapper

--- a/baselines/IPPO/config/ippo_cnn_overcooked.yaml
+++ b/baselines/IPPO/config/ippo_cnn_overcooked.yaml
@@ -14,13 +14,13 @@
 "ENV_NAME": "overcooked"
 "REW_SHAPING_HORIZON": 2.5e6 # for how many timesteps add a shaping reward
 "ENV_KWARGS": 
-  "layout" : "counter_circuit"
+  "layout" : "cramped_room"
 "ANNEAL_LR": True
 "SEED": 30
 "NUM_SEEDS": 1
 "TUNE": False
 
 # WandB Params
-"ENTITY": ""
-"PROJECT": ""
+"ENTITY": "sandily"
+"PROJECT": "action-query"
 "WANDB_MODE" : "online"
