Adjust config files for debugging

--- a/baselines/IPPO/config/ippo_cnn_overcooked.yaml
+++ b/baselines/IPPO/config/ippo_cnn_overcooked.yaml
@@ -21,6 +21,6 @@
 "TUNE": False
 
 # WandB Params
-"ENTITY": ""
-"PROJECT": ""
+"ENTITY": "sandily"
+"PROJECT": "debug_cnn"
 "WANDB_MODE" : "online"
