--- a/baselines/IPPO/config/ippo_ff_overcooked.yaml
+++ b/baselines/IPPO/config/ippo_ff_overcooked.yaml
@@ -20,6 +20,6 @@
 "NUM_SEEDS": 1
 
 # WandB Params
-"ENTITY": "mttga"
-"PROJECT": "jaxmarl-overcooked"
+"ENTITY": "sandily"
+"PROJECT": "debug_ff"
 "WANDB_MODE" : "online"
