Debug to see the expected dimension and rename file to re_action instead of policy_aware.

--- a/baselines/IPPO/config/ippo_ff_overcooked.yaml
+++ b/baselines/IPPO/config/ippo_ff_overcooked.yaml
@@ -14,7 +14,7 @@
 "ACTIVATION": "tanh"
 "ENV_NAME": "overcooked"
 "ENV_KWARGS": 
-  "layout" : "coord_ring"
+  "layout" : "cramped_room"
 "ANNEAL_LR": True
 "SEED": 30
 "NUM_SEEDS": 1
